--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,19 @@ html, body {
 	width: 100%;
 	height: 100%;
 }
-#one {
-	background: url(images/rainbowtractor.jpg);
-	opacity: .6;
+
+html { 
+  background: url(images/One.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
+/*#one {
+	background: url(images/One.jpg);
+	opacity: .6;
+}*/
 
 #wrapper {
 	width: 100%;
